--- a/css/index.css
+++ b/css/index.css
@@ -144,28 +144,6 @@
   }
 }
 
-@media (max-width: 1300px) {
-  .nav-btn {
-    position: fixed;
-    right: 38px;
-    top: 35px;
-    z-index: 10000;
-    cursor: pointer;
-  }
-  .nav-btn span {
-    display: block;
-    width: 35px;
-    height: 3px;
-    background-color: #1f1e3e;
-    border-radius: 5px;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-  }
-  .nav-btn .bar2 {
-    margin: 7px 0;
-  }
-}
-
 header {
   width: 100%;
   margin: 0 auto;
@@ -603,12 +581,41 @@ header .slide ul {
 }
 
 .s2 .port .site .fp {
-  padding: 2% 0;
+  margin: 1% 0;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+}
+
+.s2 .port .site .fp .blank {
+  position: relative;
+}
+
+.s2 .port .site .fp .blank .up {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: .5s;
+  transition: .5s;
+  color: black;
+  line-height: 2;
+  /* display:none; */
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 10px;
+  z-index: 1;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  height: 0;
+}
+
+.s2 .port .site .fp .blank:hover .up {
+  opacity: 1;
 }
 
 .s2 .port .site .fp img {
@@ -619,24 +626,31 @@ header .slide ul {
 }
 
 .s2 .port .site .fp img:hover {
-  opacity: 80%;
+  opacity: 40%;
+  display: block;
 }
 
-.s2 .port .site .fp a {
+.s2 .port .site a {
   padding-top: 4%;
   font-size: 20px;
   line-height: 30px;
   font-weight: 700;
   width: 50%;
+  position: relative;
 }
 
-.s2 .port .site .fp a p {
+.s2 .port .site a p {
   font-size: 15px;
+  margin: 0;
   text-align: left;
   font-weight: normal;
 }
 
-.s2 .port .site .sp {
+.s2 .port .site a:hover p {
+  opacity: 1;
+}
+
+.s2 .port .sp {
   padding: 2% 0;
   width: 100%;
   display: -webkit-box;
@@ -644,18 +658,41 @@ header .slide ul {
   display: flex;
 }
 
-.s2 .port .site .sp img {
+.s2 .port .sp .blank .up {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  color: black;
+  width: 100%;
+  line-height: 2;
+  /* display:none; */
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background: black;
+  padding: 10px;
+  z-index: 1;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  height: 0;
+  display: none;
+  overflow: hidden;
+}
+
+.s2 .port .sp .blank img {
   padding: 10px;
   border-color: black;
   border-width: 5px;
   width: 90%;
 }
 
-.s2 .port .site .sp img:hover {
+.s2 .port .sp .blank img:hover {
   opacity: 80%;
 }
 
-.s2 .port .site .sp a {
+.s2 .port .sp a {
   padding-top: 4%;
   width: 50%;
   font-size: 20px;
@@ -663,13 +700,13 @@ header .slide ul {
   font-weight: 700;
 }
 
-.s2 .port .site .sp a p {
+.s2 .port .sp a p {
   font-size: 15px;
   text-align: left;
   font-weight: normal;
 }
 
-.s2 .port .site .tp {
+.s2 .port .tp {
   padding: 2% 0;
   width: 100%;
   display: -webkit-box;
@@ -677,18 +714,41 @@ header .slide ul {
   display: flex;
 }
 
-.s2 .port .site .tp img {
+.s2 .port .tp .blank .up {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  color: black;
+  width: 100%;
+  line-height: 2;
+  /* display:none; */
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background: black;
+  padding: 10px;
+  z-index: 1;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  height: 0;
+  display: none;
+  overflow: hidden;
+}
+
+.s2 .port .tp .blank img {
   padding: 10px;
   border-color: black;
   border-width: 5px;
   width: 90%;
 }
 
-.s2 .port .site .tp img:hover {
+.s2 .port .tp .blank img:hover {
   opacity: 80%;
 }
 
-.s2 .port .site .tp a {
+.s2 .port .tp a {
   padding-top: 4%;
   width: 50%;
   font-size: 20px;
@@ -696,10 +756,33 @@ header .slide ul {
   font-weight: 700;
 }
 
-.s2 .port .site .tp a p {
+.s2 .port .tp a p {
   font-size: 15px;
   text-align: left;
   font-weight: normal;
+}
+
+.s2 .port .tp .up {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  color: black;
+  width: 100%;
+  line-height: 2;
+  /* display:none; */
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background: black;
+  padding: 10px;
+  z-index: 1;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  height: 0;
+  display: none;
+  overflow: hidden;
 }
 
 .s3 h2 {
@@ -712,7 +795,7 @@ header .slide ul {
   position: relative;
 }
 
-.s3 .contact .thank a {
+.s3 .contact .thank > a {
   border-style: solid;
   border-width: 8px;
   font-size: 3em;
@@ -724,7 +807,17 @@ header .slide ul {
   width: 70vw;
   height: 65vh;
   padding: 4.6rem 6rem;
+  color: black;
   background: white;
+}
+
+.s3 .contact .thank .last {
+  color: black;
+  text-decoration: none;
+}
+
+.s3 .contact .thank .last:hover {
+  color: rgba(95, 158, 160, 0.603);
 }
 
 .s3 .contact .thank .cje p {
