--- a/css/index.scss
+++ b/css/index.scss
@@ -765,6 +765,9 @@
                             &:hover p{
                                 opacity:1;
                             }
+                            .color{
+                                position: absolute;
+                            }
                         }
                       
                     }
