--- a/css/index.css
+++ b/css/index.css
@@ -647,6 +647,11 @@ header .slide ul {
   display: block;
 }
 
+.s2 .port .site .fp .phone {
+  padding-left: 100px;
+  bottom: 100px;
+}
+
 .s2 .port .site a {
   padding-top: 4%;
   font-size: 20px;
@@ -665,6 +670,10 @@ header .slide ul {
 
 .s2 .port .site a:hover p {
   opacity: 1;
+}
+
+.s2 .port .site a .color {
+  position: absolute;
 }
 
 .s2 .port .sp {
@@ -736,8 +745,10 @@ header .slide ul {
   left: 0;
   bottom: 0;
   color: black;
+  font-size: 40px;
   width: 100%;
   line-height: 2;
+  font-weight: bold;
   /* display:none; */
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
