--- a/css/index.scss
+++ b/css/index.scss
@@ -747,6 +747,10 @@
                                 }
                                 
                             }
+                            .phone{
+                                padding-left: 100px;
+                                bottom: 100px;
+                            }
                         }
                         a{
                             padding-top: 4%;
@@ -827,8 +831,10 @@
                             .up{
                                 position:absolute; left:0; bottom:0;
                                 color: black;
+                                font-size: 40px;
                                 width:100%; 
                                 line-height:2;
+                                font-weight: bold;
                                 /* display:none; */
                                 border-bottom-left-radius:4px;
                                 border-bottom-right-radius:4px;
