--- a/css/index.css
+++ b/css/index.css
@@ -647,11 +647,6 @@ header .slide ul {
   display: block;
 }
 
-.s2 .port .site .fp .phone {
-  padding-left: 100px;
-  bottom: 100px;
-}
-
 .s2 .port .site a {
   padding-top: 4%;
   font-size: 20px;
@@ -748,7 +743,6 @@ header .slide ul {
   font-size: 40px;
   width: 100%;
   line-height: 2;
-  font-weight: bold;
   /* display:none; */
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -798,6 +792,8 @@ header .slide ul {
   width: 100%;
   line-height: 2;
   /* display:none; */
+  font-weight: bold;
+  font-size: 20px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   background: black;
