--- a/css/index.scss
+++ b/css/index.scss
@@ -747,10 +747,7 @@
                                 }
                                 
                             }
-                            .phone{
-                                padding-left: 100px;
-                                bottom: 100px;
-                            }
+                          
                         }
                         a{
                             padding-top: 4%;
@@ -834,7 +831,7 @@
                                 font-size: 40px;
                                 width:100%; 
                                 line-height:2;
-                                font-weight: bold;
+                                // font-weight: bold;
                                 /* display:none; */
                                 border-bottom-left-radius:4px;
                                 border-bottom-right-radius:4px;
@@ -877,6 +874,8 @@
                             width:100%; 
                             line-height:2;
                             /* display:none; */
+                            font-weight: bold;
+                            font-size: 20px;
                             border-bottom-left-radius:4px;
                             border-bottom-right-radius:4px;
                             background:black;
